# snakecore

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build.yml  lint.yml
snakecore/: __init__.py  config.py  constants.py  exceptions.py
snakecore/_events/: __init__.py  base_events.py  client_events.py
snakecore/_jobs/: __init__.py  jobs.py  loops.py  manager.py  minijobs.py  mixins.py  proxies.py
snakecore/_jobutils/: __init__.py  messaging.py
snakecore/_storage/: __init__.py  abc.py  discord_storage.py
snakecore/command_handler/: __init__.py  bot.py  converters.py  decorators.py  parser.py
snakecore/command_handler/parsing/: __init__.py  converters.py  parser.py
snakecore/commands/: __init__.py  _types.py  bot.py  converters.py  decorators.py  parser.py  transformers.py
snakecore/constants/: __init__.py  enums.py
snakecore/db/: __init__.py  abc.py  discorddb.py  localdb.py
snakecore/events/: __init__.py  base_events.py  client_events.py
snakecore/jobs/: __init__.py  base_jobs.py  groupings.py  jobs.py  loops.py  manager.py  minijobs.py  mixins.py  proxies.py
snakecore/jobs/jobutils/: __init__.py  messaging.py
snakecore/jobs/utils/: __init__.py  messaging.py
snakecore/jobutils/: __init__.py  messaging.py
snakecore/storage/: __init__.py  abc.py  discord_storage.py  local_storage.py
snakecore/utils/: __init__.py  embed_utils.py  embeds.py  pagination.py  regex_patterns.py  serializers.py  utils.py
tests/: config_test.py  db_test.py  storage_test.py
